Line overflow fix

--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ h2 {
 	color: #fff;
 	margin: 0;
 	margin-bottom: 25px;
+	overflow: hidden;
 }
 
 h2:after {
@@ -300,7 +301,7 @@ li:before {
 		margin-left: 20px;
 		position: absolute;
 	    top: 50%;
-	    width: 40%;
+	    width: 100%;
 	    height: 1px;
 	    content: '\a0';
 	    background-color: gray;
